--- a/css/layout.css
+++ b/css/layout.css
@@ -73,7 +73,7 @@ line-height: 10px;
 
 }
 
-.social_header .phone-info span{padding: 0px 0 0 10px; margin: 0px 0 0 10px;}
+/* .social_header .phone-info span{padding: 0px 0 0 10px; margin: 0px 0 0 10px;} */
 .social_header .phone-info.with_nav span{border-left-style:solid; border-left-width: 1px;}
 
 .fixed_header #main{ padding-top:88px; } /* padding of the main container should be equal height as the header height above*/
@@ -687,19 +687,17 @@ position: relative;
 }
 
 #top .title_container .container{
-padding:10px 0;
-min-height: 56px;
+padding: 0;
 }
 
 .title_container .main-title {
-margin: 0;
-font-size: 16px;
-position: relative;
-z-index: 2;
-min-height: 36px;
-line-height: 2.3em;
-top: 0;
-font-weight: 400;
+	margin: 0;
+	font-size: 35px;
+	line-height: 1.4em;
+	font-weight: 700;
+	position: relative;
+	z-index: 2;
+	min-height: 36px;
 }
 
 .title_meta, #top .portfolio-entry .title_meta{
@@ -810,10 +808,184 @@ left: 207px;
 right:auto;
 left:0;
 }
+/* --- */
+#header_meta .sub_menu{
+	position: static;
+	float: left;
+	margin-top: 0;
+	border-left: 1px solid #fff;
+}
+#header_meta .sub_menu .phone-info{
+	line-height: 30px;
+}
+#header_meta .sub_menu .phone-info a{
+	display: inline-block;
+	vertical-align: middle;
+	border-right: 1px solid #fff;
+	padding: 0 10px;
+}
+#header_meta .sub_menu .phone-info span{
+	display: inline-block;
+	vertical-align: middle;
+	padding: 0 10px;
+	width: auto;
+}
+.header-banner{
+	margin-bottom: 20px;
+}
+#header_meta .form-signup{
+	float: right;
+	margin: 1px 0;
+}
+#header_meta .form-signup label{
+	display: inline-block;
+	vertical-align: middle;
+	font-size: 11px;
+	line-height: 16px;
+	font-weight: 700;
+	margin: 0 7px 0 0;
+	color:#edb500 !important;
+}
+#header_meta .form-signup input[type="text"]{
+	background:#fbfbfb !important;
+	display: inline-block;
+	vertical-align: middle;
+	border:1px solid #000 !important;
+	margin:0;
+	padding:5px 6px;
+	height: 27px;
+	width:160px;
+	font-size: 11px;
+	color: #333;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	-webkit-box-shadow: inset 0 5px 10px rgba(0,0,0,0.3);
+	box-shadow: inset 0 5px 10px rgba(0,0,0,0.3);
+}
+#header_meta .form-signup input[type="submit"]{
+	display: inline-block;
+	vertical-align: middle;
+	background:#edb500;
+	border:1px solid #000;
+	height:27px;
+	margin:0;
+	padding:0 6px;
+	font-size:11px;
+	text-transform: uppercase;
+	font-weight: 700;
+	cursor:pointer;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+}
 
+.b-section-gallery .b-gallery{
+	float: left;
+	position: relative;
+}
+.b-section-gallery .b-images-aside{
+	float: right;
+}
+.b-gallery{
+	width: 720px;
+	max-width: 100%;
+	margin: 0;
+}
+.b-gallery .slides{
+	margin: 0;
+}
+.b-gallery .slides img{
+	display: block;
+	width: 100%;
+}
+.flex-direction-nav{
+	margin: 0;
+}
+.b-gallery .flex-prev,
+.b-gallery .flex-next{
+	position: absolute;
+	left: 10px;
+	top: 50%;
+	margin-top: -25px;
+	background: #222;
+	border: 2px solid #fff;
+	width: 50px;
+	height: 50px;
+	color: #fff;
+	font:700 30px/37px 'Oswald', Helvetica, sans-serif;
+	text-align: center;
+	-webkit-border-radius:50%;
+	border-radius:50%;
+	opacity: 0.5;
+	filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+}
+.b-gallery .flex-next{
+	left: auto;
+	right: 10px;
+}
+.b-gallery .flex-prev:hover,
+.b-gallery .flex-next:hover{
+	text-decoration: none;
+	opacity: 1;
+	filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+}
+.b-gallery .flex-prev:focus,
+.b-gallery .flex-next:focus{
+	text-decoration: none;
+}
+
+.b-images-aside{
+	max-width: 300px;
+	margin: 0;
+}
+.b-images-aside li{
+	margin-top: 10px;
+}
+.b-images-aside li:first-child{
+	margin-top: 0;
+}
+.b-images-aside img{
+	display: block;
+	width: 100%;
+}
+.main_color.container_wrap.fullsize{
+	border: none;
+}
+@media only screen and (max-width: 1140px){
+	.b-section-gallery .b-gallery{
+		float: none;
+		margin: 0 0 10px;
+	}
+	.b-gallery{
+		width: 100%;
+	}
+	.b-section-gallery .b-images-aside{
+		float: none;
+	}
+	.b-images-aside{
+		margin: 0 auto;
+	}
+}
+@media only screen and (max-width: 767px){
+	#header_meta .container{
+		padding-bottom: 10px;
+	}
+	#top .social_bookmarks{
+		float: none;
+	}
+	#header_meta .sub_menu{
+		float: none;
+		border: none;
+		margin: 0 0 10px;
+	}
+	#header_meta .sub_menu .phone-info{
+		line-height: 15px;
+	}
+}
+/* --- */
 /*social bookmarks*/
 
 #top .social_bookmarks {
+float: left;
 height: 30px;
 z-index: 150;
 margin:0;
@@ -2900,6 +3072,14 @@ right: 23px;
 .show_mobile_menu #advanced_menu_hide{
 opacity: 1;
 visibility: visible;
+}
+.cf:before,
+.cf:after{
+	content: '';
+	display: table;
+}
+.cf:after{
+	clear: both;
 }
 
 @media only screen and (max-width: 989px) {
