--- a/css/base.css
+++ b/css/base.css
@@ -443,3 +443,11 @@ text-align: center;
 font-size: 11px;
 padding: 3px;
 }
+
+#mc_message .mc_success_msg{
+	background: #404040;
+	display: block;
+	position: absolute;
+	top: 0;
+	left: -10px;
+}
