--- a/css/layout.css
+++ b/css/layout.css
@@ -833,12 +833,27 @@ left:0;
 .header-banner{
 	margin-bottom: 20px;
 }
-#header_meta .form-signup{
+#header_meta .toolbar{
 	float: right;
 	margin: 1px 0;
 }
-#header_meta .form-signup label{
+#mc_signup{
 	display: inline-block;
+	vertical-align: middle;
+}
+#mc_signup_form{
+	margin: 0 !important;
+}
+#mc_signup_form .mc_merge_var,
+#mc_signup_form .mc_signup_submit{
+	display: inline-block;
+	vertical-align: middle;
+}
+.widget_mailchimpsf_widget{
+	white-space: nowrap;
+}
+.widget_mailchimpsf_widget label{
+	display: inline-block !important;
 	vertical-align: middle;
 	font-size: 11px;
 	line-height: 16px;
@@ -846,7 +861,7 @@ left:0;
 	margin: 0 7px 0 0;
 	color:#edb500 !important;
 }
-#header_meta .form-signup input[type="text"]{
+#mc_signup_form input[type="text"]{
 	background:#fbfbfb !important;
 	display: inline-block;
 	vertical-align: middle;
@@ -862,13 +877,14 @@ left:0;
 	-webkit-box-shadow: inset 0 5px 10px rgba(0,0,0,0.3);
 	box-shadow: inset 0 5px 10px rgba(0,0,0,0.3);
 }
-#header_meta .form-signup input[type="submit"]{
+#mc_signup_form #mc_signup_submit{
 	display: inline-block;
 	vertical-align: middle;
 	background:#edb500;
 	border:1px solid #000;
 	height:27px;
-	margin:0;
+	width: auto;
+	margin:0 !important;
 	padding:0 6px;
 	font-size:11px;
 	text-transform: uppercase;
@@ -877,6 +893,17 @@ left:0;
 	-webkit-border-radius:4px;
 	border-radius:4px;
 }
+#mc_signup_form .mc_merge_var{
+	margin: 0;
+}
+#mc_display_rewards,
+#mc_signup_form br,
+#mc_signup_form .mc_header_email{
+	display: none !important;
+}
+
+	
+
 
 .b-section-gallery .b-gallery{
 	float: left;
